syntax = "proto3";

package account.aggregates.account.use_case;
option go_package="vl-account/proto_generated/account/aggregates/account/use_case;protoaccountusecase";

message Token {
  string id_token = 1;
  string access_token = 2;
  string refresh_token = 3;
  int64 expired_in = 4;
  uint64 organization_id = 5;
  string username = 6;
}
