syntax = "proto3";

package common.grpc;
option go_package="vl-account/proto_generated/common/grpc;protogrpc";

import "proto/common/error_codes.proto";

message GRPCRequest {
  string token = 1;
  uint64 page_id = 2;
  uint64 function_id = 3;
  uint64 base_id = 4;
  string language = 5;
}

message GRPCResponse {
  Error error = 1;
}

message Error {
  common.ErrorCodes code = 1;
  string exception = 2;
  string message_on_log = 3;
  string message_on_frontend = 4;
  int32 http_code = 5;
}
